# NexusShell

./: .clangd  .gitignore  CNAME  Downloads.html  README.md  ShortPad.sln  index.html
.github/workflows/: cmake-single-platform.yml  msbuild.yml
Client/: CMakeLists.txt  main.cpp
Client/include/: Client.h  Client.hpp  Config.h  Config.hpp  GUI.h  GUI.hpp  Header.h  Header.hpp
Client/src/: Client.cpp  Config.cpp  GUI.cpp  main.cpp
Server/: CMakeLists.txt  Config.cpp  None.exp  None.lib  Server.rc  Server.vcxproj  Server.vcxproj.filters  ShortPad.sln
Server/include/: Config.h  Config.hpp  GUI.h  GUI.hpp  Header.h  Header.hpp  Server.h  Server.hpp
Server/src/: Config.cpp  GUI.cpp  Server.cpp  main.cpp
_app/: version.json
_app/immutable/chunks/: paths.e4e993c7.js  singletons.2b85561f.js  singletons.a8aa20db.js  singletons.ba57dc84.js
_app/immutable/entry/: app.329a4f5b.js  app.c3376315.js  app.e8095a5c.js  start.273ac5bd.js  start.96f00625.js  start.c1d5cf57.js
_app/immutable/nodes/: 0.60358f68.js  0.90d13d18.js  0.c3d2c755.js  1.1f2c26c0.js  1.d4803f4e.js  1.e1fcc305.js  2.48949b56.js  2.b58de1ae.js  3.fd19bab2.js
css/: main.css
docs/: package-lock.json  package.json  svelte.config.js
docs/src/: app.html
docs/src/routes/: +layout.svelte  +page.svelte
docs/src/routes/Downloads/: +page.svelte
docs/static/css/: main.css
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_freetype.cpp  imgui_internal.h
imgui/backends/: imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h
imgui/backends/SDL3/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_egl.h  SDL_endian.h  SDL_intrin.h  SDL_main.h  SDL_mutex.h  SDL_oldnames.h  SDL_opengles2.h  SDL_opengles2_gl2ext.h  SDL_opengles2_khrplatform.h  SDL_pixels.h  SDL_platform_defines.h  SDL_render.h  SDL_surface.h  SDL_syswm.h
imgui/freetype/: fterrors.h  ftglyph.h  imgui_freetype.cpp  imgui_freetype.h
imgui/freetype/freetype/: ftsynth.h  fttypes.h
imgui/freetype/freetype/config/: ftoption.h
lib/SDL3/: SDL3_image.lib
lib/zlib/: zlib.lib
traypp/include/: tray.hpp
traypp/include/components/: imagebutton.hpp  submenu.hpp
traypp/include/core/windows/: tray.hpp
traypp/src/components/: submenu.cpp  syncedtoggle.cpp  toggle.cpp
traypp/src/core/: traybase.cpp
traypp/src/core/windows/: icon.cpp  tray.cpp
